--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,3 +42,4 @@
 //----------------------------------*/
 
 @import 'vendor/_external.scss';
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
