--- a/src/scss/modules/_defaults.scss
+++ b/src/scss/modules/_defaults.scss
@@ -7,12 +7,18 @@ html {
   font-size: 62.5%;
 }
 body {
-  font: 300 13px/1.6 'Helvetica Neue', Helvetica, Arial;
+  font: 300 13px/1.6 'Montserrat-Regular', Helvetica, Arial;
   color: #444;
-  background: radial-gradient(ellipse at center, $base 0, $darken 70%, $back 100%);
-  transition: all .4s .3s ease-in;
+  background: radial-gradient(
+    ellipse at center,
+    $base 0,
+    $darken 70%,
+    $back 100%
+  );
+  transition: all 0.4s 0.3s ease-in;
 }
-body,html{
-	min-height: 100vh;
-	overflow: hidden;
+body,
+html {
+  min-height: 100vh;
+  // overflow: hidden;
 }
