--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -1,10 +1,44 @@
 @font-face {
-  font-family: 'Font-Name';
-  src: url('../fonts/font-name.eot');
-  src: url('../fonts/font-name.eot?#iefix') format('embedded-opentype'),
-       url('../fonts/font-name.woff') format('woff'),
-       url('../fonts/font-name.ttf') format('truetype'),
-       url('../fonts/font-name.svg#font-name') format('svg');
+  font-family: 'ArchiveGaramondPro';
+  src: url('../../../app/assets/fonts/ArchiveGaramondPro/ArchiveGaramondPro.eot');
+  src: url('../../../app/assets/fonts/ArchiveGaramondPro/ArchiveGaramondPro.eot?#iefix')
+      format('embedded-opentype'),
+    url('../../../app/assets/fonts/ArchiveGaramondPro/ArchiveGaramondPro.woff')
+      format('woff'),
+    url('../../../app/assets/fonts/ArchiveGaramondPro/ArchiveGaramondPro.ttf')
+      format('truetype'),
+    url('../../../app/assets/fonts/ArchiveGaramondPro/ArchiveGaramondPro.svg#font-name')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ArchiveGaramondPro-Bold';
+  src: url('../../../app/assets/fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.eot');
+  src: url('../../../app/assets/fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.eot?#iefix')
+      format('embedded-opentype'),
+    url('../../../app/assets/fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.woff')
+      format('woff'),
+    url('../../../app/assets/fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.ttf')
+      format('truetype'),
+    url('../../../app/assets/fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.svg#font-name')
+      format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ArchiveGaramondPro-BoldItalic';
+  src: url('../../../app/assets/fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.eot');
+  src: url('../../../app/assets/fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.eot?#iefix')
+      format('embedded-opentype'),
+    url('../../../app/assets/fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.woff')
+      format('woff'),
+    url('../../../app/assets/fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.ttf')
+      format('truetype'),
+    url('../../../app/assets/fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.svg#font-name')
+      format('svg');
   font-weight: normal;
   font-style: normal;
 }
