--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,5 +41,5 @@
 // VENDOR
 //----------------------------------*/
 
-@import 'vendor/_external.scss';
+// @import 'vendor/_external.scss';
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
