--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,42 +2,48 @@
 
 <main class="main" role="main">
   <section id="gallery">
-    <p>Enter the</p>
-    <h1>My Away</h1>
-    <p>in the USA Instagram Photo Contest</p>
-    <hr />
-    <hr />
-    <p>#MYAWAYContest</p>
+    <div id="gallery-text">
+      <span>Enter the</span>
+      <h1>My Away</h1>
+      <p>in the USA Instagram Photo Contest</p>
+      <hr />
+      <hr />
+      <p>#MYAWAYContest</p>
+    </div>
+    <img class="gallery-image" src="../assets/img/slide-1.jpg" />
   </section>
 
   <section id="enter">
     <h1>How to Enter</h1>
     <div>
-      <h2>Capture It</h2>
-      <hr />
-      <p>
-        Snap photos of a view of nature, landscapes, national or state parks, or
-        wherever the great outdoors takes you.
-      </p>
-    </div>
-    <div>
-      <h2>Share It</h2>
-      <hr />
-      <p>
-        Upload your best images to Instagram from June 1 - June 30, 2016 with
-        #MyAwayContest and a caption that tells how you found it.
-      </p>
-    </div>
-    <div>
-      <h2>Win It</h2>
-      <hr />
-      <p>
-        Winner will be announced in mid August, so be sure to bookmark this page
-        and check back in with us to view the grand prize-winning image!
-      </p>
+      <div class="enter-step">
+        <h2>Capture It</h2>
+        <hr />
+        <p>
+          Snap photos of a view of nature, landscapes, national or state parks,
+          or wherever the great outdoors takes you.
+        </p>
+      </div>
+      <div class="enter-step">
+        <h2>Share It</h2>
+        <hr />
+        <p>
+          Upload your best images to Instagram from June 1 - June 30, 2016 with
+          #MyAwayContest and a caption that tells how you found it.
+        </p>
+      </div>
+      <div class="enter-step">
+        <h2>Win It</h2>
+        <hr />
+        <p>
+          Winner will be announced in mid August, so be sure to bookmark this
+          page and check back in with us to view the grand prize-winning image!
+        </p>
+      </div>
     </div>
     <a>View Official Rules</a>
   </section>
+
   <section id="prize">
     <h1>You could win a Fujifilm X-T10 camera package</h1>
     <hr />
@@ -47,6 +53,7 @@
       Go RVing, you'll have everything you need to capture your next adventure.
     </p>
   </section>
+
   <section>
     <div id="judge">
       <h2>Meet the Judge</h2>
