--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -30,14 +30,14 @@
 
 @font-face {
   font-family: 'ArchiveGaramondPro-BoldItalic';
-  src: url('../../../app/assets/fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.eot');
-  src: url('../../../app/assets/fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.eot?#iefix')
+  src: url('../fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.eot');
+  src: url('../fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.eot?#iefix')
       format('embedded-opentype'),
-    url('../../../app/assets/fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.woff')
+    url('../fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.woff')
       format('woff'),
-    url('../../../app/assets/fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.ttf')
+    url('../fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.ttf')
       format('truetype'),
-    url('../../../app/assets/fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.svg#font-name')
+    url('../fonts/ArchiveGaramondPro-BoldItalic/ArchiveGaramondPro-BoldItalic.svg#font-name')
       format('svg');
   font-weight: normal;
   font-style: normal;
