--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,46 +2,60 @@
 
 <main class="main" role="main">
   <section id="gallery">
-    <div id="gallery-text">
-      <span>Enter the</span>
-      <h1>My Away</h1>
-      <p>in the USA Instagram Photo Contest</p>
-      <hr />
-      <hr />
-      <p>#MYAWAYContest</p>
-    </div>
     <img class="gallery-image" src="../assets/img/slide-1.jpg" />
+    <div id="gallery-text">
+      <div class="gallery-area">
+        <p>Enter the</p>
+        <h1>My Away</h1>
+        <p>in the USA Instagram Photo Contest</p>
+        <img src="../assets/img/rule-small-copy-8.png" class="rule" />
+      </div>
+      <div class="gallery-area arrows">
+        <img src="../assets/img/arrow.png" class="left-arrow" />
+        <img src="../assets/img/arrow_2.png" class="right-arrow" />
+      </div>
+      <div class="gallery-area">
+        <img src="../assets/img/rule-small-copy-8.png" class="rule" />
+        <p>#MYAWAYContest</p>
+      </div>
+    </div>
   </section>
 
   <section id="enter">
     <h1>How to Enter</h1>
     <div>
       <div class="enter-step">
+        <img src="../assets/img/vector-smart-object.png" />
         <h2>Capture It</h2>
-        <hr />
+        <img src="../assets/img/rule-small-copy-8.png" class="rule" />
         <p>
           Snap photos of a view of nature, landscapes, national or state parks,
           or wherever the great outdoors takes you.
         </p>
       </div>
       <div class="enter-step">
+        <img src="../assets/img/vector-smart-object-1.png" />
+
         <h2>Share It</h2>
-        <hr />
+        <img src="../assets/img/rule-small-copy-8.png" class="rule" />
         <p>
           Upload your best images to Instagram from June 1 - June 30, 2016 with
           #MyAwayContest and a caption that tells how you found it.
         </p>
       </div>
       <div class="enter-step">
+        <img src="../assets/img/vector-smart-object-2.png" />
+
         <h2>Win It</h2>
-        <hr />
+        <img src="../assets/img/rule-small-copy-8.png" class="rule" />
         <p>
           Winner will be announced in mid August, so be sure to bookmark this
           page and check back in with us to view the grand prize-winning image!
         </p>
       </div>
     </div>
-    <a>View Official Rules</a>
+    <a href="">VIEW OFFICIAL RULES</a><br />
+    <img src="../assets/img/rule-big-copy_2.png" class="rule-big" />
   </section>
 
   <section id="prize">
