--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -1,13 +1,11 @@
 @font-face {
   font-family: 'ArchiveGaramondPro';
-  src: url('../../../app/assets/fonts/ArchiveGaramondPro/ArchiveGaramondPro.eot');
-  src: url('../../../app/assets/fonts/ArchiveGaramondPro/ArchiveGaramondPro.eot?#iefix')
+  src: url('../fonts/ArchiveGaramondPro/ArchiveGaramondPro.eot');
+  src: url('../fonts/ArchiveGaramondPro/ArchiveGaramondPro.eot?#iefix')
       format('embedded-opentype'),
-    url('../../../app/assets/fonts/ArchiveGaramondPro/ArchiveGaramondPro.woff')
-      format('woff'),
-    url('../../../app/assets/fonts/ArchiveGaramondPro/ArchiveGaramondPro.ttf')
-      format('truetype'),
-    url('../../../app/assets/fonts/ArchiveGaramondPro/ArchiveGaramondPro.svg#font-name')
+    url('../fonts/ArchiveGaramondPro/ArchiveGaramondPro.woff') format('woff'),
+    url('../fonts/ArchiveGaramondPro/ArchiveGaramondPro.ttf') format('truetype'),
+    url('../fonts/ArchiveGaramondPro/ArchiveGaramondPro.svg#font-name')
       format('svg');
   font-weight: normal;
   font-style: normal;
@@ -15,14 +13,14 @@
 
 @font-face {
   font-family: 'ArchiveGaramondPro-Bold';
-  src: url('../../../app/assets/fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.eot');
-  src: url('../../../app/assets/fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.eot?#iefix')
+  src: url('../fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.eot');
+  src: url('../fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.eot?#iefix')
       format('embedded-opentype'),
-    url('../../../app/assets/fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.woff')
+    url('../fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.woff')
       format('woff'),
-    url('../../../app/assets/fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.ttf')
+    url('../fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.ttf')
       format('truetype'),
-    url('../../../app/assets/fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.svg#font-name')
+    url('../fonts/ArchiveGaramondPro-Bold/ArchiveGaramondPro-Bold.svg#font-name')
       format('svg');
   font-weight: normal;
   font-style: normal;
