--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -59,6 +59,10 @@
   </section>
 
   <section id="prize">
+    <img
+      src="../assets/img/camera.jpg"
+      srcset="../assets/img/camera.jpg, ../assets/img/camera@2x.jpg, ../assets/img/camera@3x.jpg"
+    />
     <h1>You could win a Fujifilm X-T10 camera package</h1>
     <hr />
     <p>
